[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Delete.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="."]
margin_left = 806.122
margin_top = 614.751
margin_right = 976.122
margin_bottom = 664.751
rect_scale = Vector2( 2, 2 )
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 97.9158
margin_top = 113.366
margin_right = 675.916
margin_bottom = 188.366
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "Type in your username and password and then press the delete button"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="LineEdit" parent="."]
margin_left = 753.049
margin_top = 427.932
margin_right = 897.049
margin_bottom = 451.932
rect_scale = Vector2( 3, 3 )
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Incorrect" type="Label" parent="."]
margin_left = 589.137
margin_top = 881.479
margin_right = 836.137
margin_bottom = 950.479
rect_scale = Vector2( 3, 3 )
text = "Inncorrect username and or password or not your own."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Passbox" type="LineEdit" parent="."]
margin_left = 753.049
margin_top = 516.995
margin_right = 897.049
margin_bottom = 540.995
rect_scale = Vector2( 3, 3 )
secret = true
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 806.122
margin_top = 739.443
margin_right = 976.122
margin_bottom = 791.443
rect_scale = Vector2( 2, 2 )
text = "Go back to settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Del" type="ConfirmationDialog" parent="."]
margin_left = 389.137
margin_top = 193.0
margin_right = 589.137
margin_bottom = 263.0
dialog_autowrap = true

[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="confirmed" from="Del" to="." method="_on_Del_confirmed"]
